force-app/main/default/objects/Terms_Sheet__c/Terms_Sheet__c.object-meta.xml
<CustomObject>
    <label>Terms Sheet</label>
    <nameField>
        <displayFormat>TS-{00000}</displayFormat>
        <label>Terms Sheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terms Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>