force-app/main/default/objects/Terms_Sheet__c/fields/GST_Amount_Date__c.field-meta.xml
<CustomField>
    <fullName>GST_Amount_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>GST Amount Date</label>
    <type>Date</type>
</CustomField>