force-app/main/default/objects/Terms_Sheet__c/fields/Home_Loan__c.field-meta.xml
<CustomField>
    <fullName>Home_Loan__c</fullName>
    <label>Home-Loan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>