force-app/main/default/objects/Terms_Sheet__c/fields/Home_Loan_Contribution_Self_Funding__c.field-meta.xml
<CustomField>
    <fullName>Home_Loan_Contribution_Self_Funding__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Home Loan Contribution / Self-Funding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>