force-app/main/default/objects/Terms_Sheet__c/fields/Home_Loan_Date__c.field-meta.xml
<CustomField>
    <fullName>Home_Loan_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Home Loan Date</label>
    <type>Date</type>
</CustomField>