force-app/main/default/objects/Terms_Sheet__c/fields/Own_Contribution_a_Date__c.field-meta.xml
<CustomField>
    <fullName>Own_Contribution_a_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Own Contribution (a) Date</label>
    <type>Date</type>
</CustomField>