force-app/main/default/objects/Terms_Sheet__c/fields/Own_Contribution_c__c.field-meta.xml
<CustomField>
    <fullName>Own_Contribution_c__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Own Contribution (c)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>