force-app/main/default/objects/Terms_Sheet__c/fields/Own_Contribution_d__c.field-meta.xml
<CustomField>
    <fullName>Own_Contribution_d__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Own Contribution (d)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>