force-app/main/default/objects/Terms_Sheet__c/fields/Own_Contribution_e_Date__c.field-meta.xml
<CustomField>
    <fullName>Own_Contribution_e_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Own Contribution (e) Date</label>
    <type>Date</type>
</CustomField>