force-app/main/default/objects/Terms_Sheet__c/fields/Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date__c</fullName>
    <defaultValue>TODAY()+10</defaultValue>
    <label>Registration Date</label>
    <type>Date</type>
</CustomField>