force-app/main/default/objects/Terms_Sheet__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <formula>Booking__r.Remarks__c</formula>
    <label>Remarks</label>
    <type>Text</type>
</CustomField>