force-app/main/default/objects/Terms_Sheet__c/fields/SDR_Amount_Date__c.field-meta.xml
<CustomField>
    <fullName>SDR_Amount_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>SDR Amount Date</label>
    <type>Date</type>
</CustomField>