force-app/main/default/objects/Terms_Sheet__c/fields/Self_funding__c.field-meta.xml
<CustomField>
    <fullName>Self_funding__c</fullName>
    <label>Self-funding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>