force-app/main/default/objects/Terms_Sheet__c/fields/Self_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Self_Funding_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Self Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>