force-app/main/default/objects/Terms_Sheet__c/fields/Token_Booking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Token_Booking_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Token/ Booking Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>