force-app/main/default/objects/Terms_Sheet__c/fields/Token_Booking_Amount_Date__c.field-meta.xml
<CustomField>
    <fullName>Token_Booking_Amount_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Token/ Booking Amount Date</label>
    <type>Date</type>
</CustomField>